SERVER-79189 Add return statement in onError chain on move primary coordinator